force-app/main/default/objects/Case/fields/OTP_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>OTP_Attempt_Count__c</fullName>
    <label>OTP Attempt Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <description>Counts consecutive failed OTP verification attempts. Reset to 0 on a successful verification or when a new OTP is requested. Used to lock the questionnaire after too many failed attempts.</description>
</CustomField>