force-app/main/default/objects/Case/fields/Questionnaire_Link__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Link__c</fullName>
    <label>Questionnaire Link</label>
    <type>Text</type>
    <formula>IF(ISBLANK(Questionnaire_Token__c), &quot;&quot;, $CustomMetadata.Shop_Request_Settings__mdt.Default.Site_Base_URL__c &amp; &quot;?token=&quot; &amp; Questionnaire_Token__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <description>Full public questionnaire URL for this Case, built from the org's configured site base URL (Shop_Request_Settings__mdt.Default.Site_Base_URL__c) plus the obfuscated Questionnaire_Token__c. Merged into the "Send Questionary" email.</description>
</CustomField>