force-app/main/default/objects/Case/fields/Questionnaire_Locked__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Locked__c</fullName>
    <label>Questionnaire Locked</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set true after 5 consecutive failed OTP attempts, blocking further verification attempts. Cleared automatically the next time a new OTP is requested (Resend), or can be cleared manually by an agent.</description>
</CustomField>