force-app/main/default/objects/Case/fields/Questionnaire_OTP_Hash__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_OTP_Hash__c</fullName>
    <label>Questionnaire OTP Hash</label>
    <length>255</length>
    <type>Text</type>
    <description>SHA-256 hash of the current one-time-password combined with Questionnaire_OTP_Salt__c. The plaintext OTP is never stored. Cleared after a successful verification (single use) or replaced whenever a new OTP is requested.</description>
</CustomField>