force-app/main/default/objects/Case/fields/Questionnaire_OTP_Salt__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_OTP_Salt__c</fullName>
    <label>Questionnaire OTP Salt</label>
    <length>32</length>
    <type>Text</type>
    <description>Per-generation random salt used together with the OTP to compute Questionnaire_OTP_Hash__c.</description>
</CustomField>