force-app/main/default/objects/Case/fields/Questionnaire_Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Session_Token__c</fullName>
    <label>Questionnaire Session Token</label>
    <length>64</length>
    <type>Text</type>
    <description>Issued only after a successful OTP verification. Required by getQuestionnaire/submitAnswers so those Apex methods cannot be called without first passing OTP. Cleared on submit; not persisted client-side beyond the page session.</description>
</CustomField>