force-app/main/default/objects/Case/fields/Questionnaire_Token__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Token__c</fullName>
    <externalId>true</externalId>
    <label>Questionnaire Token</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
    <description>Obfuscated random token used in the questionnaire link sent to the requester. Never the Case Id. Generated once by QuestionnaireTokenService when Status moves to Send Questionary.</description>
</CustomField>