force-app/main/default/objects/Case/recordTypes/Shop_Request.recordType-meta.xml
<RecordType>
    <fullName>Shop_Request</fullName>
    <active>true</active>
    <businessProcess>Shop_Request_Support_Process</businessProcess>
    <label>Shop Request</label>
</RecordType>