force-app/main/default/objects/Case/validationRules/Case_Type_Required_Before_Questionary.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Type_Required_Before_Questionary</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Shop_Request&quot; &amp;&amp;
ISPICKVAL(Status, &quot;Send Questionary&quot;) &amp;&amp;
ISBLANK(TEXT(Case_Type__c))</errorConditionFormula>
    <errorDisplayField>Case_Type__c</errorDisplayField>
    <errorMessage>Case Type is required before moving this request to Send Questionary.</errorMessage>
</ValidationRule>