force-app/main/default/objects/Case/listViews/Shop_Request_Cases.listView-meta.xml
<ListView>
    <fullName>Shop_Request_Cases</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>Shop Request Cases</label>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
</ListView>